# hex2dec

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: Requirements.md  Sprint1-Reflection.md  Sprint2-Reflection.md  Sprint3-Reflection.md
src/: cli.rs  err.rs  main.rs  math.rs  tests.rs  util.rs
src/io/: buff_reader.rs  cli.rs  file.rs  mod.rs
src/math/: context.rs  conversion.rs  mod.rs  offset.rs
src/util/: err.rs  mod.rs  tests.rs
