[package]
name = "hex2dec"
version = "1.0.0"
edition = "2024"

[dependencies.clap]
version = "4.5.58"
features = ["derive"]

[dependencies.log]
version = "0.4.29"

[dependencies.env_logger]
version = "0.10"

[dependencies.termcolor]
version = "1.4.1"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = "fat"
panic = "abort"